theodolite/examples/httpbin-envoy/envoy-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
  labels:
    app: httpbin-envoy
data:
  envoy.yaml: |
    static_resources:
      listeners:
      - name: listener_0
        address:
          socket_address: { address: 0.0.0.0, port_value: 8080 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              access_log:
              - name: envoy.access_loggers.stdout
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
              codec_type: AUTO
              route_config:
                name: local_route
                virtual_hosts:
                - name: local_service
                  domains: ["*"]
                  routes:
                  - match:
                      path: "/"
                    route:
                      cluster: httpbin
                      prefix_rewrite: "/delay/1"
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      clusters:
      - name: httpbin
        connect_timeout: 0.25s
        type: LOGICAL_DNS
        lb_policy: ROUND_ROBIN
        circuit_breakers:
          thresholds:
          - max_connections: 10
            max_pending_requests: 100
        load_assignment:
          cluster_name: httpbin
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: 127.0.0.1, port_value: 80 }
    #stats_config:
    #  stats_matcher:
    #    inclusion_list:
    #      patterns:
    #        - exact: "http.ingress_http.downstream_rq_time"
    #        - prefix: "http.ingress_http.downstream_rq_time."
      
    admin:
      access_log_path: "/dev/null"
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
